--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -1,43 +1,46 @@
+{% load static %}
+{% load django_bootstrap5  %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>UCCS CS Students</title>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Bootstrap demo</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Music App</title>
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
 </head>
-
-
 <body>
-<div class="container-fluid">
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-<div class="container-fluid">
-<a class="navbar-brand" href="#">Navbar</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item">
-<a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="#">Menu 1</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="#">Menu 2</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}">Music App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'song_list' %}">Songs</a>
+                    </li>
+                    <!-- Additional navigation links can be added here -->
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <div class="container mt-4">
+        {% block content %}
+       <!-- Content of child templates will go here -->
+        {% endblock %}
+    </div>
 
-<!-- add block content from html template -->
-{% block content %}
+    <footer class="bg-light mt-5 py-3">
+        <div class="container text-center">
+            <p>&copy; 2023 Music App. All rights reserved.</p>
+        </div>
+    </footer>
 
-
-{% endblock %}
-</div>
 </body>
 </html>
