--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -10,30 +10,39 @@
     <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Music App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'song_list' %}">Songs</a>
-                    </li>
-                    <!-- Additional navigation links can be added here -->
-                </ul>
-            </div>
-        </div>
+
+    <nav class="navbar">
+        <!-- Logo linking to home -->
+        <a class="nav-logo" href="{% url 'home' %}">
+            <img src="/static/images/logo.png " alt="Music App Logo Button" style="height: 100px;">
+        </a>
+        
+        <!-- Other navbar items -->
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+        <a class="nav-link" href="{% url 'song_list' %}">Song List</a>
+           
+        <!-- Spacer -->
+        <div class="spacer"></div>
+
+        <!-- Sign In button on the far right -->
+        <a class="nav-link login-btn">Sign In</a>
     </nav>
 
-    <div class="container mt-4">
-        {% block content %}
-       <!-- Content of child templates will go here -->
-        {% endblock %}
+    <div class="content-wrapper">
+        <!-- Left padding -->
+        <div class="left-padding"></div>
+    
+        <!-- Main Content -->
+        <div class="main-content">
+            <div class="container mt-4">
+                {% block content %}
+                    <!-- Content of child templates will go here -->
+                {% endblock %}
+            </div>
+        </div>
+    
+        <!-- Right padding -->
+        <div class="right-padding"></div>
     </div>
 
     <footer class="bg-light mt-5 py-3">
