--- a/music_app/templates/music_app/song_detail.html
+++ b/music_app/templates/music_app/song_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base_template.html' %}
+{% load django_bootstrap5  %}
 
 {% block content %}
     <h2>{{ song.name }}</h2>
@@ -16,7 +17,7 @@
     </ul>
 
     <div class="mt-4">
-        <a href="{% url 'song_edit' song.id %}" class="btn btn-warning">Edit Song</a>
-        <a href="{% url 'song_delete' song.id %}" class="btn btn-danger">Delete Song</a>
+        <a href="{% url 'song_edit' song.id %}" class="btn btn-custom">Edit Song</a>
+        <a href="{% url 'song_delete' song.id %}" class="btn btn-delete">Delete Song</a>
     </div>
 {% endblock %}
