Forms to update edit and add songs works

--- a/music_app/templates/music_app/add_song.html
+++ b/music_app/templates/music_app/add_song.html
@@ -1,5 +1,6 @@
+
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-custom">Submit</button>
+    <button type="submit">Add Song</button>
 </form>
