--- a/music_app/templates/music_app/edit_song.html
+++ b/music_app/templates/music_app/edit_song.html
@@ -1,5 +1,5 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-custom">Submit</button>
+    <button type="submit">Update Song</button>
 </form>
