Users can now be created from the site

--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -25,7 +25,7 @@
         <div class="spacer"></div>
 
         <!-- Sign In button on the far right -->
-        <a class="nav-link login-btn">Sign In</a>
+        <a class="nav-link" href="{% url 'login' %}">Sign In</a>
     </nav>
 
     <div class="content-wrapper">
