--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -25,7 +25,15 @@
         <div class="spacer"></div>
 
         <!-- Sign In button on the far right -->
+
+        {% if user.is_authenticated %}
+        <a class="nav-link" href="{% url 'user_detail' user.id %}">Profile</a>
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+    {% else %}
         <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+    {% endif %}
+
+
     </nav>
 
     <div class="content-wrapper">
