--- a/music_app/templates/music_app/song_detail.html
+++ b/music_app/templates/music_app/song_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base_template.html' %}
-{% load django_bootstrap5  %}
+{% load django_bootstrap5 %}
 
 {% block content %}
     <h2>{{ song.name }}</h2>
@@ -17,7 +17,14 @@
     </ul>
 
     <div class="mt-4">
-        <a href="{% url 'song_edit' song.id %}" class="btn btn-custom">Edit Song</a>
-        <a href="{% url 'song_delete' song.id %}" class="btn btn-delete">Delete Song</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'song_edit' song.id %}" class="btn btn-custom">Edit Song</a>
+        {% else %}
+            <a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-custom">Login to Edit</a>
+        {% endif %}
+        
+        {% if request.user.is_superuser %}
+            <a href="{% url 'song_delete' song.id %}" class="btn btn-delete">Delete Song</a>
+        {% endif %}
     </div>
 {% endblock %}
