--- a/music_app/templates/music_app/song_list.html
+++ b/music_app/templates/music_app/song_list.html
@@ -20,7 +20,12 @@
     </ul>
 
     <div>
-        <a href="{% url 'song_add' %}" class="btn btn-custom">Add New Song</a>
+
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'song_add' %}" class="btn btn-custom">Add Song</a>
+         {% else %}
+        <a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-custom">Login to Add Songs</a>
+         {% endif %}
     </div>
 </div>  {# End of Flexbox container #}
 {% endblock %}
