--- a/music_app/templates/music_app/add_song.html
+++ b/music_app/templates/music_app/add_song.html
@@ -1,6 +1,13 @@
+{% extends 'base_template.html' %}
+{% load django_bootstrap5 %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add Song</button>
-</form>
+{% block content %}
+<div class="container mt-4">
+    <h2>Add New Song</h2>
+    <form method="post" class="form">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <button type="submit" class="btn btn-primary">Add Song</button>
+    </form>
+</div>
+{% endblock %}
