--- a/music_app/templates/music_app/add_song.html
+++ b/music_app/templates/music_app/add_song.html
@@ -2,12 +2,16 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>Add New Song</h2>
-    <form method="post" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        <button type="submit" class="btn btn-primary">Add Song</button>
-    </form>
+<div class="container mt-4" style="display: flex; justify-content: center;">
+    <div class="form-box">
+        <h2 class="text-center">Add New Song</h2>
+        <form method="post" class="form">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Add Song</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
