--- a/music_app/templates/music_app/delete_song.html
+++ b/music_app/templates/music_app/delete_song.html
@@ -2,12 +2,16 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>Delete Song</h2>
-    <form method="post" class="form">
-        {% csrf_token %}
-        <p>Are you sure you want to delete the song "{{ song.name }}"?</p>
-        <button type="submit" class="btn btn-danger">Confirm Delete</button>
-    </form>
+<div class="container mt-4" style="display: flex; justify-content: center;">
+    <div class="form-box">
+        <h2 class="text-center">Delete Song</h2>
+        <form method="post" class="form">
+            {% csrf_token %}
+            <p class="text-center">Are you sure you want to delete the song "{{ song.name }}"?</p>
+            <div class="text-center">
+                <button type="submit" class="btn btn-danger">Confirm Delete</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
