--- a/music_app/templates/music_app/register.html
+++ b/music_app/templates/music_app/register.html
@@ -3,13 +3,17 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>Register</h2>
-    <form method="post" action="{% url 'register' %}">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        <button type="submit" class="btn btn-primary">Register</button>
-    </form>
-    <p>Already have an account? <a href="{% url 'login' %}">Login here.</a></p>
+<div class="container mt-4" style="display: flex; justify-content: center;">
+    <div class="form-box">
+        <h2 class="text-center">Register</h2>
+        <form method="post" action="{% url 'register' %}">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </form>
+        <p class="text-center">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+    </div>
 </div>
 {% endblock %}
