--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -27,11 +27,17 @@
         <!-- Sign In button on the far right -->
 
         {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'user_detail' user.id %}">Profile</a>
-        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-    {% endif %}
+            <!-- Custom Dropdown Menu -->
+            <div class="nav-item dropdown">
+                <a class="nav-link" href="#">Account</a>
+                <div class="dropdown-menu">
+                    <a href="{% url 'user_detail' user.id %}">Profile</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
+            </div>
+        {% else %}
+            <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+        {% endif %}
 
 
     </nav>
@@ -58,6 +64,8 @@
             <p>&copy; 2023 Music App. All rights reserved.</p>
         </div>
     </footer>
+
+
 
 </body>
 </html>
