--- a/music_app/templates/music_app/song_list.html
+++ b/music_app/templates/music_app/song_list.html
@@ -8,11 +8,17 @@
     <ul class="list-group flex-grow-1 mb-3">  {# flex-grow-1 allows the list to occupy available space, pushing the button to the bottom #}
         {% for song in songs %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="{% url 'song_detail' song.id %}">{{ song.name }}</a>
-            <div>
-                <span class="badge bg-secondary">{{ song.instrument }}</span>
-                <span class="badge bg-info">{{ song.genre }}</span>
+
+            <div class="song-link-box">
+                <a href="{% url 'song_detail' song.id %}">{{ song.name }}</a>
+                <div>
+                    <span class="badge bg-secondary">{{ song.instrument }}</span>
+                    <span class="badge bg-info">{{ song.genre }}</span>
+                </div>
             </div>
+            
+
+      
         </li>
         {% empty %}
         <li class="list-group-item">No songs available.</li>
