songs can now be rated and moved to the learned list. Still need to implement the refletion of the rating for all users and update the template to correctly dislplay the data.

--- a/music_app/templates/music_app/base_template.html
+++ b/music_app/templates/music_app/base_template.html
@@ -56,7 +56,7 @@
         <div class="left-padding"></div>
     
         <!-- Main Content -->
-        <div class="main-content">
+        <div class="main-content" style="color: white;">
             <div class="container mt-4">
                 {% block content %}
                     <!-- Content of child templates will go here -->
