--- a/music_app/templates/music_app/add_song.html
+++ b/music_app/templates/music_app/add_song.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-4" style="display: flex; justify-content: center;">
+<div class="container mt-4" style="display: flex; justify-content: center; color: black;">
     <div class="form-box">
         <h2 class="text-center">Add New Song</h2>
         <form method="post" class="form">
