--- a/music_app/templates/music_app/index.html
+++ b/music_app/templates/music_app/index.html
@@ -9,10 +9,9 @@
         <p class="lead">Explore, share, and enjoy the world of music at your fingertips.</p>
         <hr class="my-4">
         <p>Discover the top trending songs and dive into the details.</p>
-        <a class="btn btn-primary btn-lg" href="{% url 'song_list' %}" role="button">Browse All Songs</a>
     </div>
 
-    <h2>Top 10 Songs</h2>
+    <h2>Top Songs</h2>
     <ul class="list-group">
         {% for song in songs %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
