--- a/music_app/templates/music_app/register.html
+++ b/music_app/templates/music_app/register.html
@@ -3,7 +3,7 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-4" style="display: flex; justify-content: center;">
+<div class="container mt-4" style="display: flex; justify-content: center; color: black;">
     <div class="form-box">
         <h2 class="text-center">Register</h2>
         <form method="post" action="{% url 'register' %}">
