--- a/music_app/templates/music_app/index.html
+++ b/music_app/templates/music_app/index.html
@@ -15,13 +15,10 @@
     <ul class="list-group">
         {% for song in songs %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-
             <div class="song-link-box">
                 <a href="{% url 'song_detail' song.id %}">{{ song.name }}</a>
-
-
+                <p>Average Rating: {{ song.average_rating|default:"Not rated yet" }}</p>
             </div>
-
         </li>
         {% empty %}
         <li class="list-group-item">No songs found.</li>
