--- a/music_app/templates/music_app/song_list.html
+++ b/music_app/templates/music_app/song_list.html
@@ -14,6 +14,8 @@
                 <div>
                     <span class="badge bg-secondary">{{ song.instrument }}</span>
                     <span class="badge bg-info">{{ song.genre }}</span>
+                    <p>Average Rating: {{ song.average_enjoyment }}</p> 
+
                 </div>
             </div>
             
