--- a/music_app/templates/music_app/index.html
+++ b/music_app/templates/music_app/index.html
@@ -11,7 +11,7 @@
         <p>Discover the top trending songs and dive into the details.</p>
     </div>
 
-    <h2>Top Songs</h2>
+    <h2>Top 10 Songs</h2>
     <ul class="list-group">
         {% for song in songs %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
